chapter3/exercise_2.7/manifests/deployment-logoutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
      - image: logoutput:latest
        imagePullPolicy: Never
        name: logoutput
        volumeMounts:
          - name: config-volume
            mountPath: /usr/src/app/files
            readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: logoutput-configmap
            items:
              - key: information.txt
                path: information.txt
