chapter3/exercise_2.7/manifests/service-logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
